--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
                 <a href="#"><span>S</span>akthivel</a>
             </div>
             <div class="nav-toggler"><span></span></div>
-            <ul class="nav">
+            <ul class="nav" id="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="#skills"><i class="fa fa-cogs"></i>Skills</a></li>
                 <li><a href="#services"  ><i class="fa fa-list"></i>Services</a></li>
                 <li><a href="#portfolio" ><i class="fa fa-briefcase"></i>Portfolio</a></li>
                 <li><a href="#contact" ><i class="fa fa-comments"></i>Contact</a></li>
@@ -114,6 +115,15 @@
                                             <p>LeetCode : <a class="okok" href="https://leetcode.com/sakthi130597/">sakthi130597</a></p>
                                         </div>
                                     </div>
+                                    <h3 class="title" id="skillss">Soft Skills</h3>
+                                    <div class="row id">
+                                        
+                                        <div class="info-item padd-15">
+                                            <p>Problem-Solving | Teamwork</p>
+                                            <p>Adaptability    | Time Management</p>
+                                            <p>Remote Work     | Online Collaboration</p>
+                                        </div>
+                                    </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
                                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
@@ -122,6 +132,9 @@
                                 </div>
                                 <div class="skills padd-15">
                                     <div class="row">
+                                        <div class="section-title padd-15">
+                                            <h2 id="skills">Skills</h2>
+                                        </div>
                                         <div class="skill-item padd-15">
                                             <h5>HTML</h5>
                                             <div class="progress">
