--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             </div>
             <div class="nav-toggler"><span></span></div>
             <ul class="nav" id="nav" id="nav-menu">
-                <li><a href="#home" id="nav-menu" class="active"><i class="fa fa-home"></i>Home</a></li>
-                <li><a href="#about" id="nav-menu"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#skills" id="nav-menu"><i class="fa fa-cogs"></i>Skills</a></li>
-                <li><a href="#services" id="nav-menu" ><i class="fa fa-list"></i>Services</a></li>
-                <li><a href="#portfolio" id="nav-menu"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="#contact" id="nav-menu"><i class="fa fa-comments"></i>Contact</a></li>
+                <li><a href="#home" id="nav-menu" class="nav-link home" class="active"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="#about" id="nav-menu" class="nav-link about"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="#skills" id="nav-menu" class="nav-link skills"><i class="fa fa-cogs"></i>Skills</a></li>
+                <li><a href="#services" id="nav-menu" class="nav-link services"><i class="fa fa-list"></i>Services</a></li>
+                <li><a href="#projects" id="nav-menu" class="nav-link projects"><i class="fa fa-briefcase"></i>Projects</a></li>
+                <li><a href="#contact" id="nav-menu" class="nav-link contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
         </div>
         <!-- aside end -->
@@ -338,8 +338,8 @@
                 </div>
             </section>
             <!-- service section end  -->
-            <!-- Portfolio section start  -->
-            <section class="portfolio section" id="portfolio">
+            <!-- Project section start  -->
+            <section class="portfolio section" id="projects">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -514,7 +514,7 @@
                     </div>
                 </div>
             </section>
-            <!-- Portfolio section end  -->
+            <!-- Project section end  -->
             <!-- contact section start  -->
             <section class="contact section" id="contact">
                 <div class="container">
