--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <a href="resume.pdf" target="_blank" download class="btn" class="nav-link resume">Download CV</a>
                         </div> 
                         <div class="home-img padd-15">
-                            <img class="home-img" src="images/professional-photo.jpg" alt="My professional photo">
+                            <img  src="images/professional-photo.jpg" alt="My professional photo">
                         </div>
                     </div>
                 </div>
