--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                                 supervision. Looking forward to join a
                                 progressive organization with opportunities
                                 to work onsignificant projects.</p>
-                            <a href="resume.pdf" target="_blank" download class="btn" class="nav-link resume">Download CV</a>
+                            
+                            <a href="resume.pdf" class="btn"  target="_blank" download >Download CV</a>
+                            
                         </div> 
                         <div class="home-img padd-15">
                             <img  src="images/professional-photo.jpg" alt="My professional photo">
@@ -133,6 +135,7 @@
                                     <div class="row">
                                         <div class="buttons padd-15">
                                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
+                                            <a href="resume.pdf" class="btn" id="resume-link-1" target="_blank" download >Download CV</a>
                                         </div>
                                     </div>
                                 </div>
@@ -269,8 +272,8 @@
                             </div>
                             <div class="github-streak">                                
                                 <h2>StreakStats</h2>                           
-                                <p class="streak-count">
-                                    <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com/?user=SakthivelMadhu" alt="">
+                                <p class="streak-count" id="github-streak-stats">
+                                    <img  src="https://github-readme-streak-stats.herokuapp.com/?user=SakthivelMadhu" alt="">
                                 </p>
                             </div>
                           </div>
@@ -281,16 +284,16 @@
                                 <div class="section-title padd-15">
                                     <h2>GitHub Stats</h2>
                                 </div>
-                                <div class="languages-list">
-                                  <img id="github-top-langs" src="https://github-readme-stats.vercel.app/api?username=SakthivelMadhu&show_icons=true&theme=radica" />
+                                <div class="languages-list" id="github-top-langs">
+                                  <img  src="https://github-readme-stats.vercel.app/api?username=SakthivelMadhu&show_icons=true&theme=radica" />
                                 </div>
                               </div>
                               <div class="github-stats-card">
                                 <div class="section-title padd-15">
                                     <h2>Top Languages</h2>
                                 </div>
-                                <div class="stats-card">
-                                  <img id="github-stats-card"  src="https://github-readme-stats.vercel.app/api/top-langs/?username=SakthivelMadhu&layout=compact" /><br>                                  
+                                <div class="stats-card" id="github-stats-card">
+                                  <img   src="https://github-readme-stats.vercel.app/api/top-langs/?username=SakthivelMadhu&layout=compact" /><br>                                  
                                 </div>
                               </div>
                         </div>
@@ -659,9 +662,9 @@
 
             <!-- resume section start  -->
             <section id="resume">
-                <h2>My Resume</h2>
+                <h2>If You Want Download My Resume, Please click here! </h2>
                 <!-- Add resume section content here -->
-                <a href="resume.pdf" id="resume" download class="btn" class="nav-link resume">Download Resume</a>
+                <a href="resume.pdf"  class="btn" id="resume-link-2" download>Download Resume</a>
             </section>
               <!-- resume section end  -->
         </div>
