--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
     <link rel="stylesheet" href="css/style-switcher.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/github-calendar-responsive.css"/>
 </head>
@@ -145,42 +146,42 @@
                                             <h2 id="skills">Skills</h2>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5 class="skills-card-name"><i class="skills-card-img" class="fa-brands fa-html5" ></i> HTML</h5>
+                                            <h5 ><i class="skills-card-img" class="fa-brands fa-html5" ></i> HTML</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width:92%"></div>
                                                 <div class="skill-percent">92%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5 class="skills-card-name"> <i class="skills-card-img" class="fa-brands fa-css3" ></i>CSS</h5>
+                                            <h5 > <i class="skills-card-img" class="fa-brands fa-css3" ></i>CSS</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width:84%"></div>
                                                 <div class="skill-percent">84%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5 class="skills-card-name"> <i class="skills-card-img" class="fa-brands fa-js" ></i>   JavaScript</h5>
+                                            <h5 > <i class="skills-card-img" class="fa-brands fa-js" ></i>   JavaScript</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width:96%"></div>
                                                 <div class="skill-percent">96%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5 class="skills-card-name"> <i class="skills-card-img" class="fa-brands fa-java" ></i>Java</h5>
+                                            <h5 > <i class="skills-card-img" class="fa-brands fa-java" ></i>Java</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width:82%"></div>
                                                 <div class="skill-percent">82%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5 class="skills-card-name"> <i class="skills-card-img" class="fa-solid fa-database" ></i> MySQL</h5>
+                                            <h5 > <i class="skills-card-img" class="fa-solid fa-database" ></i> MySQL</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width:80%"></div>
                                                 <div class="skill-percent">80%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5 class="skills-card-name"> <i class="skills-card-img" class="fa-brands fa-python" ></i>Python</h5>
+                                            <h5 > <i class="skills-card-img" class="fa-brands fa-python" ></i>Python</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width:66%"></div>
                                                 <div class="skill-percent">66%</div>
