--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
                                 progressive organization with opportunities
                                 to work onsignificant projects.</p>
                             
-                            <a href="resume.pdf" class="btn"  target="_blank" download >Download CV</a>
-                            
+                            <!-- <a href="resume.pdf" class="btn"  target="_blank" download >Download CV</a> -->
+                            <a href="resume.pdf" id="resume-link-1"   target="_blank">Download Resume</a>
+
                         </div> 
                         <div class="home-img padd-15">
                             <img  src="images/professional-photo.jpg" alt="My professional photo">
@@ -271,10 +272,10 @@
                                 <!-- <img src="https://api.github.com/users/SakthivelMadhu/events" alt=""> -->
                               </div>
                             </div>
-                            <div class="github-streak">                                
+                            <div class="github-streak" class="github-stats-image">                                
                                 <h2>StreakStats</h2>                           
-                                <p class="streak-count" id="github-streak-stats">
-                                    <img  src="https://github-readme-streak-stats.herokuapp.com/?user=SakthivelMadhu" alt="">
+                                <p class="streak-count" >
+                                    <img  src="https://github-readme-streak-stats.herokuapp.com/?user=SakthivelMadhu" alt="GitHub Streak Stats" id="github-streak-stats">
                                 </p>
                             </div>
                           </div>
@@ -285,16 +286,16 @@
                                 <div class="section-title padd-15">
                                     <h2>GitHub Stats</h2>
                                 </div>
-                                <div class="languages-list" id="github-top-langs">
-                                  <img  src="https://github-readme-stats.vercel.app/api?username=SakthivelMadhu&show_icons=true&theme=radica" />
+                                <div class="languages-list" class="github-stats-image">
+                                  <img  src="https://github-readme-stats.vercel.app/api?username=SakthivelMadhu&show_icons=true&theme=radica" alt="GitHub Stats Card" id="github-stats-card" />
                                 </div>
                               </div>
                               <div class="github-stats-card">
                                 <div class="section-title padd-15">
                                     <h2>Top Languages</h2>
                                 </div>
-                                <div class="stats-card" id="github-stats-card">
-                                  <img   src="https://github-readme-stats.vercel.app/api/top-langs/?username=SakthivelMadhu&layout=compact" /><br>                                  
+                                <div class="stats-card" class="github-stats-image">
+                                  <img   src="https://github-readme-stats.vercel.app/api/top-langs/?username=SakthivelMadhu&layout=compact" alt="GitHub Top Languages" id="github-top-langs"/><br>                                  
                                 </div>
                               </div>
                         </div>
@@ -665,7 +666,9 @@
             <section id="resume">
                 <h2>If You Want Download My Resume, Please click here! </h2>
                 <!-- Add resume section content here -->
-                <a href="resume.pdf"  class="btn" id="resume-link-2" download>Download Resume</a>
+                <!-- <a href="resume.pdf"  class="btn" id="resume-link-2" download>Download Resume</a> -->
+                <a href="resume.pdf" id="resume-link-2"  target="_blank">Download Resume</a>
+
             </section>
               <!-- resume section end  -->
         </div>
