--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                             <a href="resume.pdf" id="resume-link-1"   target="_blank">Download Resume</a>
 
                         </div> 
-                        <div class="home-img padd-15">
-                            <img  src="images/professional-photo.jpg" alt="My professional photo">
+                        <div class="home-imag padd-15">
+                            <img  src="images/professional-photo.jpg" alt="My professional photo" class="home-img">
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                                     <div class="row">
                                         <div class="buttons padd-15">
                                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
-                                            <a href="resume.pdf" class="btn" id="resume-link-1" target="_blank" download >Download CV</a>
+                                            <a href="resume.pdf" class="btn" id="resume-link-1" target="_blank" >Download CV</a>
                                         </div>
                                     </div>
                                 </div>
@@ -272,16 +272,20 @@
                                 <!-- <img src="https://api.github.com/users/SakthivelMadhu/events" alt=""> -->
                               </div>
                             </div>
-                            <div class="github-streak" class="github-stats-image">                                
-                                <h2>StreakStats</h2>                           
-                                <p class="streak-count" >
+                            <!-- <h2>StreakStats</h2> -->
+                            <div class="github-streak" >                                
+                                <div class="section-title padd-15">
+                                    <h2>StreakStats</h2>
+                                </div>
+                                <div class="streak-count" class="github-stats-image">
                                     <img  src="https://github-readme-streak-stats.herokuapp.com/?user=SakthivelMadhu" alt="GitHub Streak Stats" id="github-streak-stats">
-                                </p>
+                                </div>
                             </div>
-                          </div>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="github-stats">
+                            
                             <div class="github-languages">
                                 <div class="section-title padd-15">
                                     <h2>GitHub Stats</h2>
@@ -289,15 +293,15 @@
                                 <div class="languages-list" class="github-stats-image">
                                   <img  src="https://github-readme-stats.vercel.app/api?username=SakthivelMadhu&show_icons=true&theme=radica" alt="GitHub Stats Card" id="github-stats-card" />
                                 </div>
-                              </div>
-                              <div class="github-stats-card">
+                            </div>
+                            <div class="github-stats-card">
                                 <div class="section-title padd-15">
                                     <h2>Top Languages</h2>
                                 </div>
                                 <div class="stats-card" class="github-stats-image">
                                   <img   src="https://github-readme-stats.vercel.app/api/top-langs/?username=SakthivelMadhu&layout=compact" alt="GitHub Top Languages" id="github-top-langs"/><br>                                  
                                 </div>
-                              </div>
+                            </div>
                         </div>
                     </div>
                 </div>
