--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 to work onsignificant projects.</p>
                             
                             <!-- <a href="resume.pdf" class="btn"  target="_blank" download >Download CV</a> -->
-                            <a href="resume.pdf" id="resume-link-1"   target="_blank">Download Resume</a>
+                            <a href="resume.pdf" id="resume-link-2"   target="_blank" download >Download Resume</a>
 
                         </div> 
                         <div class="home-imag padd-15">
@@ -137,7 +137,7 @@
                                     <div class="row">
                                         <div class="buttons padd-15">
                                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
-                                            <a href="resume.pdf" class="btn" id="resume-link-1" target="_blank" >Download CV</a>
+                                            <a href="resume.pdf" class="btn" id="resume-link-2" target="_blank" download >Download CV</a>
                                         </div>
                                     </div>
                                 </div>
@@ -671,7 +671,7 @@
                 <h2>If You Want Download My Resume, Please click here! </h2>
                 <!-- Add resume section content here -->
                 <!-- <a href="resume.pdf"  class="btn" id="resume-link-2" download>Download Resume</a> -->
-                <a href="resume.pdf" id="resume-link-2"  target="_blank">Download Resume</a>
+                <a href="resume.pdf" id="resume-link-1"  target="_blank" download >Download Resume</a>
 
             </section>
               <!-- resume section end  -->
